--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vite-plugin-dts": "^3.7.0",
-    "vitest": "^1.1.3",
+    "vitest": "^1.6.0",
     "zod": "^3.22.4"
+  },
+  "dependencies": {
+    "awilix": "^10.0.2",
+    "ofetch": "^1.3.4"
   }
 }
