--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.7.2",
     "@faker-js/faker": "^8.4.1",
+    "@types/bun": "^1.1.1",
     "msw": "^2.2.14",
     "tiny-invariant": "^1.3.3",
     "typescript": "^5.4.5",
@@ -41,5 +42,11 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/civo/civojs"
+  },
+  "dependencies": {
+    "@effect/platform": "^0.52.2",
+    "@effect/platform-bun": "^0.34.3",
+    "@effect/schema": "^0.66.14",
+    "effect": "^3.1.2"
   }
 }
